# to_do_list-standalone-fullstack-google-pub_dart-dart-flutter-connectrpc-cargo-rust-axum-postgres

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  roadmap.md
client/: .env.example  .gitignore  README.md  pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/intrepion/to_do_list_client/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart  main.dart
client/lib/models/: models.dart  todo.dart  user.dart
client/lib/providers/: auth_provider.dart  providers.dart  todo_provider.dart
client/lib/screens/: home_screen.dart  login_screen.dart  splash_screen.dart
client/lib/services/: api_client.dart  auth_service.dart  services.dart  todo_service.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
proto/: README.md  buf.yaml  todo.proto
proto/auth/v1/: auth.proto
proto/todo/v1/: todo.proto
scripts/: setup_database.sh
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs
server/migrations/: 001_create_users_table_with_google_id_unique.sql  001_init_users.sql  002_create_todos_table_with_user_id_foreign_key.sql  003_add_updated_at_trigger_to_users.sql
server/proto/: todo.v1.proto
server/sql/: schema.sql
server/src/: config.rs  db.rs  error.rs  handlers.rs  jwt.rs  lib.rs  main.rs  middleware.rs  models.rs  repository.rs  routes.rs  services.rs  utils.rs
server/src/config/: mod.rs
server/src/middleware/: auth.rs  mod.rs
server/src/models/: mod.rs
server/src/models/todo/: mod.rs
server/src/models/user/: mod.rs
server/src/repositories/: mod.rs  todo.rs  user.rs
server/src/server/: mod.rs
server/src/server/routes/: auth.rs  mod.rs  todo.rs
server/src/services/: auth.rs  mod.rs  todo.rs
