[package]
name = "to-do-list-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
hyper = "0.14"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# ConnectRPC for gRPC-like APIs
connectrpc = "0.8"
prost = "0.12"
prost-types = "0.12"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
bb8 = "0.8"
bb8-postgres = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# JWT Authentication
jsonwebtoken = "9.0"

# Environment configuration
dotenvy = "0.15"

# Logging
log = "0.4"
pretty_env_logger = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tower-http = { version = "0.5", features = ["trace"] }

[build-dependencies]
prost-build = "0.12"
